--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://todor-arnaudovski.github.io/ProducerWeb",
     "name": "producerweb",
     "private": true,
     "version": "0.0.0",
@@ -6,7 +7,9 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "dependencies": {
         "firebase": "^9.17.1",
@@ -23,6 +26,7 @@
         "@types/react-dom": "^18.0.9",
         "@vitejs/plugin-react": "^3.0.0",
         "autoprefixer": "^10.4.13",
+        "gh-pages": "^5.0.0",
         "postcss": "^8.4.20",
         "tailwindcss": "^3.2.4",
         "typescript": "^4.9.3",
